--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "busboy": "^0.3.0",
+    "child-process-promise": "^2.2.1",
+    "cors": "^2.8.5",
+    "firebase": "^5.9.0",
+    "firebase-admin": "^7.1.1",
+    "firebase-functions": "^2.2.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.4.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "scroll-events": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
